fixtures/python/test-double/should_fail/unittest_mock_from_import.py
from unittest.mock import MagicMock, patch

service = MagicMock()
